# baby-tracker

./: .dockerignore  .env.firebase.example  .env.schema  .gitignore  .justfile  AGENTS.md  Caddyfile.tailscale  Dockerfile  LEDGER.md  README.md  docker-compose.yml  export_events.sql  full_reload.sh  ideas.md  pyproject.toml  restart.sh  skills-lock.json
.specify/templates/: plan-template.md
baby-tracker/.codex/: auth.json  config.toml  history.jsonl  version.json
data/: baby-tracker.sqlite  baby-tracker.sqlite-shm  baby-tracker.sqlite-wal
docs/: apple-container.md  podman.md  sqlite-migration.md  tailscale-caddy.md
docs/Notes/: 2026-01-26_00-23-14_GMT_opinionated-review-plan-notes.md
docs/plans/: 2026-01-22-offline-mode-sync.md  2026-03-18-app-js-refactor-plan.md
docs/systemd/: baby-tracker-scheduler.service.example  baby-tracker.service.example
scripts/: apple-container-restart.sh  apple-container-run.sh  apple-container-up.sh  backfill_feed_amounts.py  migrate_sqlite_to_firestore.py  podman-install.sh
specs/001-event-history-log/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-time-since-last/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/001-two-click-log/: quickstart.md  spec.md  tasks.md
specs/001-wee-events/: plan.md  research.md  spec.md  tasks.md
specs/002-user-homepages/: quickstart.md  spec.md  tasks.md
src/app/: config.py  main.py  scheduler.py
src/lib/: validation.py
tests/: conftest.py
tests/frontend/: test_next_feed_modal.py
tests/integration/: test_bottles_api.py  (+13 more)
(+92 files in other folders)
