[project]
name = "baby"
version = "0.1.0"
description = "Private baby feed and poo tracker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Flask>=3.0.0",
  "gunicorn>=22.0.0",
  "google-cloud-firestore>=2.16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
